--- a/Lectures/references.bib
+++ b/Lectures/references.bib
@@ -21,6 +21,20 @@
   file = {/home/blegat/Downloads/EijkhoutIntroToHPC.pdf}
 }
 
+@book{eijkhout2017Parallel,
+  title = {Parallel {{Programming}} in {{MPI}} and {{OpenMP}}},
+  author = {Eijkhout, Victor},
+  year = {2017},
+  month = nov,
+  publisher = {Lulu.com},
+  abstract = {This is a textbook about parallel programming of scientific application on large computers, using MPI and OpenMP.},
+  googlebooks = {vzFBDwAAQBAJ},
+  isbn = {978-1-387-40028-7},
+  langid = {english},
+  keywords = {Computers / General},
+  file = {/home/blegat/git/UCLouvain/LINMA2710/TheArtofHPC_pdfs/vol2/EijkhoutParallelProgramming.pdf}
+}
+
 @misc{gramaIntroduction,
   title = {Introduction to {{Parallel Computing}}},
   author = {Grama, Ananth and Gupta, Anshul and Karypis, George and Kumar, Vipin},
