Add slides for power consumption lecture

--- a/Lectures/references.bib
+++ b/Lectures/references.bib
@@ -56,3 +56,32 @@
   langid = {english},
   keywords = {Computers / Distributed Systems / General,Computers / Programming / General}
 }
+
+@article{wang2011Power,
+  title = {Power Gating Strategies on {{GPUs}}},
+  author = {Wang, Po-Han and Yang, Chia-Lin and Chen, Yen-Ming and Cheng, Yu-Jung},
+  year = {2011},
+  month = oct,
+  journal = {ACM Trans. Archit. Code Optim.},
+  volume = {8},
+  number = {3},
+  pages = {13:1--13:25},
+  issn = {1544-3566},
+  doi = {10.1145/2019608.2019612},
+  url = {https://dl.acm.org/doi/10.1145/2019608.2019612},
+  abstract = {As technology continues to shrink, reducing leakage is critical to achieving energy efficiency. Previous studies on low-power GPUs (Graphics Processing Units) focused on techniques for dynamic power reduction, such as DVFS (Dynamic Voltage and Frequency Scaling) and clock gating. In this paper, we explore the potential of adopting architecture-level power gating techniques for leakage reduction on GPUs. We propose three strategies for applying power gating on different modules in GPUs. The Predictive Shader Shutdown technique exploits workload variation across frames to eliminate leakage in shader clusters. Deferred Geometry Pipeline seeks to minimize leakage in fixed-function geometry units by utilizing an imbalance between geometry and fragment computation across batches. Finally, the simple time-out power gating method is applied to nonshader execution units to exploit a finer granularity of the idle time. Our results indicate that Predictive Shader Shutdown eliminates up to 60\% of the leakage in shader clusters, Deferred Geometry Pipeline removes up to 57\% of the leakage in the fixed-function geometry units, and the simple time-out power gating mechanism eliminates 83.3\% of the leakage in nonshader execution units on average. All three schemes incur negligible performance degradation, less than 1\%.},
+  file = {/home/blegat/Zotero/storage/99RU4G9G/Wang et al. - 2011 - Power gating strategies on GPUs.pdf}
+}
+
+@inproceedings{you2023Zeus,
+  title = {Zeus: {{Understanding}} and {{Optimizing GPU Energy Consumption}} of {{DNN Training}}},
+  shorttitle = {Zeus},
+  booktitle = {20th {{USENIX Symposium}} on {{Networked Systems Design}} and {{Implementation}} ({{NSDI}} 23)},
+  author = {You, Jie and Chung, Jae-Won and Chowdhury, Mosharaf},
+  year = {2023},
+  pages = {119--139},
+  url = {https://www.usenix.org/conference/nsdi23/presentation/you},
+  isbn = {978-1-939133-33-5},
+  langid = {english},
+  file = {/home/blegat/Zotero/storage/B8F54RA7/You et al. - 2023 - Zeus Understanding and Optimizing GPU Energy Consumption of DNN Training.pdf}
+}
